--- a/Javascript/RxJsDemo/package.json
+++ b/Javascript/RxJsDemo/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "rxjsdemo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "booktracker",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently --kill-others \".\\node_modules\\.bin\\webpack --watch\" \"node server.js\"",
+    "test": "mocha -r ts-node/register **/*.spec.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
-    "rxjs": "^6.2.1"
+    "@types/mocha": "^5.2.5",
+    "body-parser": "~1.18.2",
+    "chai": "^4.2.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~3.1.0",
+    "express": "~4.16.2",
+    "jade": "~1.11.0",
+    "mocha": "^5.2.0",
+    "morgan": "~1.9.0",
+    "rxjs": "^6.3.3",
+    "serve-favicon": "~2.4.5",
+    "ts-node": "^7.0.1"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "concurrently": "~3.5.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "ts-loader": "^4.1.0",
+    "typescript": "~2.9.1",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
